fix(admin): remove django default letterspacing

--- a/benefits/static/css/admin/overrides.css
+++ b/benefits/static/css/admin/overrides.css
@@ -15,3 +15,7 @@
 table {
   caption-side: top;
 }
+
+#user-tools {
+  letter-spacing: 0;
+}
